--- a/index.html
+++ b/index.html
@@ -93,7 +93,7 @@
                             <span>90%</span>
                         </div>
                         <div class="skill-bar">
-                            <div class="skill-progress" style="width: 90%"></div>
+                            <div class="skill-progress" data-width="90"></div>
                         </div>
                     </div>
                     <div class="skill-item">
@@ -102,7 +102,7 @@
                             <span>80%</span>
                         </div>
                         <div class="skill-bar">
-                            <div class="skill-progress" style="width: 80%"></div>
+                            <div class="skill-progress" data-width="80"></div>
                         </div>
                     </div>
                     <div class="skill-item">
@@ -111,7 +111,7 @@
                             <span>70%</span>
                         </div>
                         <div class="skill-bar">
-                            <div class="skill-progress" style="width: 70%"></div>
+                            <div class="skill-progress" data-width="70"></div>
                         </div>
                     </div>
                 </div>
@@ -123,7 +123,7 @@
                             <span>75%</span>
                         </div>
                         <div class="skill-bar">
-                            <div class="skill-progress" style="width: 75%"></div>
+                            <div class="skill-progress" data-width="75"></div>
                         </div>
                     </div>
                     <div class="skill-item">
@@ -132,7 +132,7 @@
                             <span>70%</span>
                         </div>
                         <div class="skill-bar">
-                            <div class="skill-progress" style="width: 70%"></div>
+                            <div class="skill-progress" data-width="70"></div>
                         </div>
                     </div>
                     <div class="skill-item">
@@ -141,7 +141,7 @@
                             <span>65%</span>
                         </div>
                         <div class="skill-bar">
-                            <div class="skill-progress" style="width: 65%"></div>
+                            <div class="skill-progress" data-width="65"></div>
                         </div>
                     </div>
                 </div>
@@ -153,7 +153,7 @@
                             <span>85%</span>
                         </div>
                         <div class="skill-bar">
-                            <div class="skill-progress" style="width: 85%"></div>
+                            <div class="skill-progress" data-width="85"></div>
                         </div>
                     </div>
                     <div class="skill-item">
@@ -162,7 +162,7 @@
                             <span>45%</span>
                         </div>
                         <div class="skill-bar">
-                            <div class="skill-progress" style="width: 45%"></div>
+                            <div class="skill-progress" data-width="45"></div>
                         </div>
                     </div>
                     <div class="skill-item">
@@ -171,7 +171,7 @@
                             <span>70%</span>
                         </div>
                         <div class="skill-bar">
-                            <div class="skill-progress" style="width: 70%"></div>
+                            <div class="skill-progress" data-width="70"></div>
                         </div>
                     </div>
                 </div>
@@ -185,42 +185,60 @@
             <div class="section-title">
                 <h2>Experiência</h2>
             </div>
-            <div class="timeline">
-                <div class="timeline-item">
-                    <div class="timeline-content">
-                        <h3>Desenvolvedor Frontend</h3>
-                        <p>12 meses de experiência</p>
+            <div class="experience-container">
+                <div class="experience-card">
+                    <div class="experience-header">
+                        <div class="experience-icon">
+                            <i class="fas fa-laptop-code"></i>
+                        </div>
+                        <div class="experience-title">
+                            <h3>Desenvolvedor Frontend</h3>
+                            <span class="experience-date">2024 - 2025</span>
+                        </div>
+                    </div>
+                    <div class="experience-body">
                         <ul>
-                            <li>Criação de interfaces interativas e responsivas com HTML, CSS e JavaScript</li>
-                            <li>Desenvolvimento de layouts modernos, acessíveis e adaptáveis para diferentes dispositivos</li>
-                            <li>Colaboração com designers para implementação de interfaces</li>
+                            <li><i class="fas fa-check-circle"></i> Criação de interfaces interativas e responsivas com HTML, CSS e JavaScript</li>
+                            <li><i class="fas fa-check-circle"></i> Desenvolvimento de layouts modernos, acessíveis e adaptáveis para diferentes dispositivos</li>
+                            <li><i class="fas fa-check-circle"></i> Colaboração com designers para implementação de interfaces</li>
                         </ul>
                     </div>
-                    <div class="timeline-date">2024 - 2025</div>
                 </div>
-                <div class="timeline-item">
-                    <div class="timeline-content">
-                        <h3>Desenvolvedor Backend</h3>
-                        <p>12 meses de experiência</p>
+                <div class="experience-card">
+                    <div class="experience-header">
+                        <div class="experience-icon">
+                            <i class="fas fa-server"></i>
+                        </div>
+                        <div class="experience-title">
+                            <h3>Desenvolvedor Backend</h3>
+                            <span class="experience-date">2024 - 2025</span>
+                        </div>
+                    </div>
+                    <div class="experience-body">
                         <ul>
-                            <li>Construção de APIs RESTful usando Node.js e Express</li>
-                            <li>Integração com MySQL para gerenciamento de dados de forma segura e eficiente</li>
-                            <li>Implementação de autenticação e autorização</li>
+                            <li><i class="fas fa-check-circle"></i> Construção de APIs RESTful usando Node.js e Express</li>
+                            <li><i class="fas fa-check-circle"></i> Integração com MySQL para gerenciamento de dados de forma segura e eficiente</li>
+                            <li><i class="fas fa-check-circle"></i> Implementação de autenticação e autorização</li>
                         </ul>
                     </div>
-                    <div class="timeline-date">2024 - 2025</div>
                 </div>
-                <div class="timeline-item">
-                    <div class="timeline-content">
-                        <h3>Versionamento de Código</h3>
-                        <p>Experiência com Git e GitHub</p>
+                <div class="experience-card">
+                    <div class="experience-header">
+                        <div class="experience-icon">
+                            <i class="fab fa-git-alt"></i>
+                        </div>
+                        <div class="experience-title">
+                            <h3>Versionamento de Código</h3>
+                            <span class="experience-date">2024 - 2025</span>
+                        </div>
+                    </div>
+                    <div class="experience-body">
                         <ul>
-                            <li>Utilização de boas práticas de versionamento</li>
-                            <li>Colaboração em equipe</li>
-                            <li>Deploys organizados</li>
+                            <li><i class="fas fa-check-circle"></i> Utilização de boas práticas de versionamento</li>
+                            <li><i class="fas fa-check-circle"></i> Colaboração em equipe</li>
+                            <li><i class="fas fa-check-circle"></i> Deploys organizados</li>
                         </ul>
                     </div>
-                    <div class="timeline-date">2024 - 2025</div>
                 </div>
             </div>
         </div>
@@ -228,16 +246,16 @@
 
     <!-- Projects Section -->
     <section class="section" id="projects">
-    <div class="container">
-        <div class="section-title">
-            <h2>Projetos Recentes</h2>
-            <div class="section-subtitle">
-                <a href="https://github.com/PabloG-7" class="github-link" target="_blank">
-                    <i class="fab fa-github"></i> Ver mais projetos no GitHub
-                </a>
+        <div class="container">
+            <div class="section-title">
+                <h2>Projetos Recentes</h2>
+                <div class="section-subtitle">
+                    <a href="https://github.com/PabloG-7" class="github-link" target="_blank">
+                        <i class="fab fa-github"></i> Ver mais projetos no GitHub
+                    </a>
+                </div>
             </div>
-        </div>
-        <div class="projects-container">
+            <div class="projects-container">
                 <div class="project-card">
                     <div class="project-image">
                         <img src="img/proj1.png" alt="LuckPet">
@@ -496,7 +514,7 @@
         });
 
         // ScrollReveal animations
-        ScrollReveal().reveal('.section-title, .about-content, .skill-card, .timeline-item, .project-card, .contact-container', {
+        ScrollReveal().reveal('.section-title, .about-content, .skill-card, .experience-card, .project-card, .contact-container', {
             delay: 200,
             distance: '50px',
             origin: 'bottom',
@@ -514,6 +532,40 @@
                 header.classList.remove('scrolled');
             }
         });
+
+        // Animate skill bars on scroll
+        function animateSkillBars() {
+            const skillBars = document.querySelectorAll('.skill-progress');
+            
+            skillBars.forEach(bar => {
+                const width = bar.getAttribute('data-width');
+                if (isElementInViewport(bar)) {
+                    bar.style.width = width + '%';
+                }
+            });
+        }
+
+        function isElementInViewport(el) {
+            const rect = el.getBoundingClientRect();
+            return (
+                rect.top >= 0 &&
+                rect.left >= 0 &&
+                rect.bottom <= (window.innerHeight || document.documentElement.clientHeight) &&
+                rect.right <= (window.innerWidth || document.documentElement.clientWidth)
+            );
+        }
+
+        // Initialize skill bars with 0 width
+        document.addEventListener('DOMContentLoaded', function() {
+            const skillBars = document.querySelectorAll('.skill-progress');
+            skillBars.forEach(bar => {
+                bar.style.width = '0';
+            });
+        });
+
+        // Check on scroll and load
+        window.addEventListener('load', animateSkillBars);
+        window.addEventListener('scroll', animateSkillBars);
     </script>
 </body>
 </html>
